# rechtLernen

./: .pre-commit-config.yaml  pyproject.toml
data/: StGB-Klausur.txt  StGB-QA.csv
scripts/: datasets.py
