[tool.poetry]
name = "rechtlernen"
version = "0.1.0"
description = "Repository for evaluating and training LLMs on StGB (German criminal law) data."
authors = ["Max Schumacher <max.schumacher12@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
